// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-member-type should handle non-existent member type 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`update-member-type should update a member type 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`update-member-type should update a member type 2`] = `
[
  {
    "hasChildren": false,
    "icon": "icon-user",
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Updated Member Type",
    "parent": null,
  },
]
`;
